2009-07-29  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, typemanager.cs, decl.cs, iterators.cs, convert.cs,
	nullable.cs, expression.cs, ecore.cs, class.cs, attribute.cs:
	More TypeManager.TypeToCoreType needed.

2009-07-29  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs: Update after recent SRE fixes.

2009-07-28  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, expression.cs, ecore.cs, delegate.cs: Use correct
	version of GetFieldHandle for fields of generic types.

2009-07-27  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, argument.cs, convert.cs, assign.cs, expression.cs,
	ecore.cs: Add TypeManager.IsDynamicType,
	PredefinedAttributes.Dynamic.

2009-07-27  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #415375
	* expression.cs: Fixed object and reference type parameter
	comparison.

2009-07-27  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #525342
	* class.cs: Attach partial method attributes to method
	implementation.

2009-07-24  Marek Safar  <marek.safar@gmail.com>

	* argument.cs, dynamic.cs, expression.cs, class.cs, attribute.cs:
	Dynamic arguments.

2009-07-24  Marek Safar  <marek.safar@gmail.com>

	* anonymous.cs (MutateField): Add imported types handling.

2009-07-23  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, delegate.cs: Moved arguments resolve into their
	counterparts expressions. Removed argument resolve from
	CollectionElementInitializer.

2009-07-23  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #523683
	* convert.cs, delegate.cs: Use common overload mechanism for method
	group conversion check.

2009-07-22  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #523899
	* generics.cs: Exact type inference with other bound types.

2009-07-22  Raja R Harinath  <harinath@hurrynot.org>

	Don't complain when the same type is implemented by the output
	assembly as well as multiple referenced assemblies
	* namespace.cs (RootNamespace.LookupTypeReflection): Add
	'must_be_unique' flag.